# game-engine

./: .gitignore  CMakeLists.txt  README.md  cell-gen.py  main.cpp
camera/: camera-controller.cpp  camera-controller.h  camera-if.h  camera.cpp  camera.h  fps-camera-controller.cpp  fps-camera-controller.h
debug/: bullet-physics-demo.json  debug-scene-data.cpp  debug-scene-data.h  debug-scene-factory.cpp  debug-scene-factory.h  debug-scene-parser.cpp  debug-scene-parser.h
demo/: bullet-hello-world.cpp  bullet-physics-demo-main.cpp  bullet-physics-demo-shaders.json  bullet-physics-demo.cpp  bullet-physics-demo.fs  bullet-physics-demo.h  bullet-physics-demo.vs  index-buffer-demo.cpp  index-buffer-demo.h  index-buffer-demo.vs  perspective-projection-demo-shaders.json  perspective-projection-demo.cpp  perspective-projection-demo.h  perspective-projection-demo.vs  shader-interpolation-demo.cpp  shader-interpolation-demo.h  shader-interpolation-demo.vs  shader-rotation-demo.cpp  shader-rotation-demo.h  shader-translation-demo.cpp  shader-translation-demo.h  shader-uniform-demo.cpp  shader-uniform-demo.h  single-point-demo.cpp  single-point-demo.h  triangle-demo.cpp  triangle-demo.h
engine/api/: engine-api.h
engine/inc/: engine.h
engine/src/: engine.cpp
file/: file-utils.cpp  file-utils.h
game/: cube.cpp  cube.h  game-object-debug-data.h  game-object-if.h  game-object-renderer.cpp  game-object-renderer.h  game-object.cpp  game-object.h  game-world-if.h  game-world.cpp  game-world.h  quad3d.cpp  quad3d.h
graphics/api/: graphics-api.h
graphics/inc/: graphics-engine.h
graphics/src/: graphics-api.cpp  graphics-engine-sdl.cpp
input/: keyboard-input-listener-if.h  mouse-input-listener-if.h  sdl-event-dispatcher.cpp  sdl-event-dispatcher.h  sdl-input-dispatcher.cpp  sdl-input-dispatcher.h
math/: math.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h
physics/: bullet-physics-engine.cpp  bullet-physics-engine.h
raycaster/: CMakeLists.txt  main.cpp  raycaster.cpp  raycaster.h  sdl-opengl-config.json
shaders/: shader-definition.h  shader-factory-if.h  shader-factory.cpp  shader-factory.h  shader-parser.cpp  shader-parser.h  shader-program-if.h  shader-program.cpp  shader-program.h
window/: window-listener-if.h
